# ime-indicator

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  app.rc  build.rs
.claude/: settings.json
.claude/commands/: release-check.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
installer/: README.md  build.ps1  setup.iss
src/: app.rs  caret.rs  ime.rs  main.rs  overlay.rs  startup.rs
tools/: gen_icon.py
