[package]
name = "ime-indicator"
version = "0.1.0"
edition = "2024"
description = "Mac-style IME indicator overlay for Windows"
license = "MIT"
publish = false

[dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Input_Ime",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "ime-indicator"
path = "src/main.rs"
