[package]
name = "ime-indicator"
version = "0.1.1"
edition = "2024"
description = "Mac-style IME indicator overlay for Windows"
license = "MIT"
publish = false
build = "build.rs"

[build-dependencies]
embed-resource = "3"

[dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows-numerics = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "ime-indicator"
path = "src/main.rs"
